content styling inside the summary panels

--- a/summary.html
+++ b/summary.html
@@ -20,7 +20,8 @@
             <div class="todo-picture">
               <img src="img/summary/pencil_1.svg" />
             </div>
-            <div class="todo-value"></div>
+            <div class="todo-value"><div>1</div>
+            <div>ToDo</div></div>
           </div>
         </div>
         <div class="summary-board-overview-done">
