styling Topic and separator, styling greeting Text

--- a/summary.html
+++ b/summary.html
@@ -10,9 +10,12 @@
     <div class="summary-header">
       <div class="summary-header-text">Kanban Project Management Tool</div>
     </div>
+
     <section class="summary-title">
-      <div class="summary-title-text">Summary</div>
+      <div class="summary-title-text" id="summary-title-360">Join 360<div class="summary-title-separator"></div><div class="summary-title-text">Key Metrics at a Glance</div></div>
     </section>
+    <section class="summary-content">
+
     <section class="summary-board-overview">
       <div class="summary-board-overview-row-1">
         <div class="summary-board-overview-todo">
@@ -47,5 +50,8 @@
         <div class="summary-board-overview-awaiting-feedback">Depp</div>
       </div>
     </section>
+    <div class="summary-greetings">good morning,<div id="summary-greetings-name">Kim Burmester<div></div>
+    </section>
+
   </body>
 </html>
