--- a/contacts.html
+++ b/contacts.html
@@ -1,26 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
     <title>Contacts</title>
 </head>
+
 <body>
     <nav class="navbar">
         <img class="navbar-logo" src="./img/icons/logo_join_nav.png" alt="">
         <ul class="nav-list">
-            <li><a class="navbar-link" href="./summary.html"><div class="navbar-link-content"><img class="navbar_img" src="./img/icons/summary_icon.png" alt="Summary Logo"><p>Summary</p></div></a></li>
-            <li><a class="navbar-link" href="./add_task.html"><div class="navbar-link-content"><img class="navbar_img" src="./img/icons/add_task_icon.png" alt="Add-Task Logo"><p>Add Task</p></div></a></li>
-            <li><a class="navbar-link" href="./board.html"><div class="navbar-link-content"><img class="navbar_img" src="./img/icons/board_icon.png" alt="Board Logo"><p>Board</p></div></a></li>
-            <li><a class="navbar-link navbar-active" href="./contacts.html"><div class="navbar-link-content"><img class="navbar_img" src="./img/icons/contacts_icon.png" alt="Contacts Logo"><p>Contacts</p></div></a></li>
+            <li><a class="navbar-link" href="./summary.html">
+                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/summary_icon.png"
+                            alt="Summary Logo">
+                        <p>Summary</p>
+                    </div>
+                </a></li>
+            <li><a class="navbar-link" href="./add_task.html">
+                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/add_task_icon.png"
+                            alt="Add-Task Logo">
+                        <p>Add Task</p>
+                    </div>
+                </a></li>
+            <li><a class="navbar-link" href="./board.html">
+                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/board_icon.png"
+                            alt="Board Logo">
+                        <p>Board</p>
+                    </div>
+                </a></li>
+            <li><a class="navbar-link navbar-active" href="./contacts.html">
+                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/contacts_icon.png"
+                            alt="Contacts Logo">
+                        <p>Contacts</p>
+                    </div>
+                </a></li>
         </ul>
         <ul class="navbar-footer">
-            <li><a class="navbar-footer-link" href=""><p>Private Policy</p></a></li>
-            <li><a class="navbar-footer-link" href=""><p>Legal Notice</p></a></li>
+            <li><a class="navbar-footer-link" href="">
+                    <p>Private Policy</p>
+                </a></li>
+            <li><a class="navbar-footer-link" href="">
+                    <p>Legal Notice</p>
+                </a></li>
         </ul>
     </nav>
-    <main></main>
-    
+    <main>
+        <header class="main-header">
+        </header>
+
+        <div class="contacts-content">
+            <section class="contact-list-area">
+                <div class="contact-list-content">
+                    <button class="add-new-contact-btn">
+                        <p>Add new contact</p><img class="add-new-contact-img" src="./img/icons/add_contact_icon.png"
+                            alt="Add-new-Contact Logo">
+                    </button>
+                    <section class="contact-list">
+                        <h4 class="contact-list-section-head">A</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">B</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">C</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">D</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">E</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">F</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">G</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">H</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">I</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">J</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">K</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">L</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">M</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">N</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">O</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">P</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">Q</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">R</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">S</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">T</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">U</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">V</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">W</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">X</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">Y</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+                        <h4 class="contact-list-section-head">Z</h4>
+                        <div class="section-seperator"></div>
+                        <ul></ul>
+
+
+                    </section>
+                </div>
+            </section>
+            <section class="contact"></section>
+        </div>
+    </main>
+
 </body>
+
 </html>
