Panel filled with content. Layout improved.

--- a/summary.html
+++ b/summary.html
@@ -23,7 +23,7 @@
             <div class="todo-picture">
               <img src="img/summary/pencil_1.svg" />
             </div>
-            <div class="todo-value"><div>1</div>
+            <div class="todo-value"><div class="summary-text-5">1</div>
             <div>ToDo</div></div>
           </div>
         </div>
@@ -32,7 +32,8 @@
             <div class="todo-picture">
               <img src="img/summary/right_1.svg" />
             </div>
-            <div class="todo-value"></div>
+            <div class="todo-value"><div class="summary-text-5">1</div>
+            <div>ToDo</div></div></div>
           </div>
         </div>
       </div>
@@ -40,14 +41,19 @@
         <div class="summary-board-overview-urgent">
           <div class="urgent-content">
             <div class="todo-picture"><img src="img/summary/prio.svg" /></div>
-            <div class="todo-value"></div>
+            <div class="summary-title-separator"></div>
+            <div class="todo-value"><div class="summary-text-5">1</div>
+            <div>ToDo</div></div></div>
           </div>
         </div>
       </div>
       <div class="summary-board-overview-row-3">
-        <div class="summary-board-overview-tasks-in-board">Bin</div>
-        <div class="summary-board-overview-tasks-in-progress">der</div>
-        <div class="summary-board-overview-awaiting-feedback">Depp</div>
+        <div class="summary-board-overview-tasks-in-board"><div class="summary-text-5">2</div>
+        <div>Tasks in Board</div></div>
+        <div class="summary-board-overview-tasks-in-progress"><div class="summary-text-5">2</div>
+        <div>Tasks in Board</div></div>
+        <div class="summary-board-overview-awaiting-feedback"><div class="summary-text-5">2</div>
+        <div>Tasks in Board</div></div>
       </div>
     </section>
     <div class="summary-greetings">good morning,<div id="summary-greetings-name">Kim Burmester<div></div>
