tasks text position changed

--- a/summary.html
+++ b/summary.html
@@ -24,7 +24,7 @@
               <img src="img/summary/pencil_1.svg" />
             </div>
             <div class="todo-value"><div class="summary-text-5">1</div>
-            <div>ToDo</div></div>
+            <div class="summary-text-1">ToDo</div></div>
           </div>
         </div>
         <div class="summary-board-overview-done">
@@ -33,7 +33,7 @@
               <img src="img/summary/right_1.svg" />
             </div>
             <div class="todo-value"><div class="summary-text-5">1</div>
-            <div>ToDo</div></div></div>
+            <div class="summary-text-1">ToDo</div></div></div>
           </div>
         </div>
       </div>
@@ -43,17 +43,17 @@
             <div class="todo-picture"><img src="img/summary/prio.svg" /></div>
             <div class="summary-title-separator"></div>
             <div class="todo-value"><div class="summary-text-5">1</div>
-            <div>ToDo</div></div></div>
+            <div class="summary-text-1">ToDo</div></div></div>
           </div>
         </div>
       </div>
       <div class="summary-board-overview-row-3">
         <div class="summary-board-overview-tasks-in-board"><div class="summary-text-5">2</div>
-        <div>Tasks in Board</div></div>
+        <div class="summary-text-1">Tasks in Board</div></div>
         <div class="summary-board-overview-tasks-in-progress"><div class="summary-text-5">2</div>
-        <div>Tasks in Board</div></div>
+        <div class="summary-text-1">Tasks in Board</div></div>
         <div class="summary-board-overview-awaiting-feedback"><div class="summary-text-5">2</div>
-        <div>Tasks in Board</div></div>
+        <div class="summary-text-1">Tasks in Board</div></div>
       </div>
     </section>
     <div class="summary-greetings">good morning,<div id="summary-greetings-name">Kim Burmester<div></div>
