Replace PNG icons with SVGs in navigation bar
Updated add_task.html to use SVG icons from the assets/svg directory instead of PNGs for the navigation bar. Added new SVG files for summary, add task, board, and contacts icons, as well as an arrow drop down icon. This improves icon scalability and consistency across the UI.

--- a/add_task.html
+++ b/add_task.html
@@ -19,7 +19,7 @@
             <div class="navbar-link-content">
               <img
                 class="navbar_img"
-                src="./img/icons/summary_icon.png"
+                src="./assets/svg/summary.svg"
                 alt="Summary Logo"
               />
               <p>Summary</p>
@@ -27,11 +27,11 @@
           </a>
         </li>
         <li>
-          <a class="navbar-link" href="./add_task.html">
+          <a class="navbar-link navbar-active" href="./add_task.html">
             <div class="navbar-link-content">
               <img
                 class="navbar_img"
-                src="./img/icons/add_task_icon.png"
+                src="./assets/svg/edit_square.svg"
                 alt="Add-Task Logo"
               />
               <p>Add Task</p>
@@ -43,7 +43,7 @@
             <div class="navbar-link-content">
               <img
                 class="navbar_img"
-                src="./img/icons/board_icon.png"
+                src="./assets/svg/board.svg"
                 alt="Board Logo"
               />
               <p>Board</p>
@@ -51,11 +51,11 @@
           </a>
         </li>
         <li>
-          <a class="navbar-link navbar-active" href="./contacts.html">
+          <a class="navbar-link " href="./contacts.html">
             <div class="navbar-link-content">
               <img
                 class="navbar_img"
-                src="./img/icons/contacts_icon.png"
+                src="./assets/svg/perm_contact_calendar.svg"
                 alt="Contacts Logo"
               />
               <p>Contacts</p>
