panel text position changed and profil circle created

--- a/summary.html
+++ b/summary.html
@@ -9,10 +9,11 @@
   <body>
     <div class="summary-header">
       <div class="summary-header-text">Kanban Project Management Tool</div>
+      <div class="profil-header"></div>
     </div>
 
     <section class="summary-title">
-      <div class="summary-title-text" id="summary-title-360">Join 360<div class="summary-title-separator"></div><div class="summary-title-text">Key Metrics at a Glance</div></div>
+      <div class="summary-title-text" id="summary-title-360">Join 360<div class="summary-title-separator-blue"></div><div class="summary-title-text">Key Metrics at a Glance</div></div>
     </section>
     <section class="summary-content">
 
@@ -41,19 +42,25 @@
         <div class="summary-board-overview-urgent">
           <div class="urgent-content">
             <div class="todo-picture"><img src="img/summary/prio.svg" /></div>
-            <div class="summary-title-separator"></div>
-            <div class="todo-value"><div class="summary-text-5">1</div>
-            <div class="summary-text-1">ToDo</div></div></div>
+            <div class="todo-value">
+                <div class="summary-text-5">1</div>
+                <div class="summary-text-1">ToDo</div>
+              </div>
+            <div class="summary-title-separator-grey"></div>
+            <div class="todo-value">
+              <div class="summary-text-9">October 16, 2022</div><br><div class="summary-text-2">Upcoming Deadline</div>
+            </div>
+            </div>
           </div>
         </div>
       </div>
       <div class="summary-board-overview-row-3">
         <div class="summary-board-overview-tasks-in-board"><div class="summary-text-5">2</div>
-        <div class="summary-text-1">Tasks in Board</div></div>
+        <div class="summary-text-1">Tasks in<br>Board</div></div>
         <div class="summary-board-overview-tasks-in-progress"><div class="summary-text-5">2</div>
-        <div class="summary-text-1">Tasks in Board</div></div>
+        <div class="summary-text-1">Tasks in<br>Board</div></div>
         <div class="summary-board-overview-awaiting-feedback"><div class="summary-text-5">2</div>
-        <div class="summary-text-1">Tasks in Board</div></div>
+        <div class="summary-text-1">Tasks in<br>Board</div></div>
       </div>
     </section>
     <div class="summary-greetings">good morning,<div id="summary-greetings-name">Kim Burmester<div></div>
