--- a/contacts.html
+++ b/contacts.html
@@ -60,113 +60,206 @@
                     <section class="contact-list">
                         <h4 class="contact-list-section-head">A</h4>
                         <div class="section-seperator"></div>
-                        <ul></ul>
+                        <ul class="list-items">
+                            <li>
+                                <div class="contact-container">
+                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-am.icon.png"
+                                        alt="Icon Test Contact">
+                                    <div class="contact-info">
+                                        <p class="contact-name">Anton Mayer</p>
+                                        <a class="contact-e-mail" href="mailto:antonm@gmail.com">antonm@gmail.com</a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="contact-container">
+                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-as-icon.png"
+                                        alt="Icon Test Contact">
+                                    <div class="contact-info">
+                                        <p class="contact-name">Anja Schulz</p>
+                                        <a class="contact-e-mail" href="mailto:schulz@gmail.com">schulz@gmail.com</a>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
 
                         <h4 class="contact-list-section-head">B</h4>
                         <div class="section-seperator"></div>
-                        <ul></ul>
+                        <ul class="list-items">
+                            <li>
+                                <div class="contact-container">
+                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-bz-icon.png"
+                                        alt="Icon Test Contact">
+                                    <div class="contact-info">
+                                        <p class="contact-name">Benedikt Ziegler</p>
+                                        <a class="contact-e-mail"
+                                            href="mailto:benedikt@gmail.com">benedikt@gmail.com</a>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
 
-                        <h4 class="contact-list-section-head">C</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">C</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
                         <h4 class="contact-list-section-head">D</h4>
                         <div class="section-seperator"></div>
-                        <ul></ul>
+                        <ul class="list-items">
+                            <li>
+                                <div class="contact-container">
+                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-de-icon.png"
+                                        alt="Icon Test Contact">
+                                    <div class="contact-info">
+                                        <p class="contact-name">David Eisenberg</p>
+                                        <a class="contact-e-mail"
+                                            href="mailto:davidberg@gmail.com">davidberg@gmail.com</a>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
 
                         <h4 class="contact-list-section-head">E</h4>
                         <div class="section-seperator"></div>
-                        <ul></ul>
+                        <ul class="list-items">
+                            <li>
+                                <div class="contact-container">
+                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-ef-icon.png"
+                                        alt="Icon Test Contact">
+                                    <div class="contact-info">
+                                        <p class="contact-name">Eva Fischer</p>
+                                        <a class="contact-e-mail" href="mailto:eva@gmail.com">eva@gmail.com</a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="contact-container">
+                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-em-icon.png"
+                                        alt="Icon Test Contact">
+                                    <div class="contact-info">
+                                        <p class="contact-name">Emmanuel Mauer</p>
+                                        <a class="contact-e-mail"
+                                            href="mailto:emmanuelma@gmail.com">emmanuelma@gmail.com</a>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
 
-                        <h4 class="contact-list-section-head">F</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">F</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">G</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">G</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">H</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">H</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">I</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">I</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">J</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">J</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">K</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">K</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">L</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">L</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
                         <h4 class="contact-list-section-head">M</h4>
                         <div class="section-seperator"></div>
-                        <ul></ul>
+                        <ul class="list-items">
+                            <li>
+                                <div class="contact-container">
+                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-em-icon.png"
+                                        alt="Icon Test Contact">
+                                    <div class="contact-info">
+                                        <p class="contact-name">Marcel Bauer</p>
+                                        <a class="contact-e-mail" href="mailto:bauer@gmail.com">bauer@gmail.com</a>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
 
-                        <h4 class="contact-list-section-head">N</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">N</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">O</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">O</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">P</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">P</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">Q</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">Q</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">R</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">R</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">S</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">S</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
                         <h4 class="contact-list-section-head">T</h4>
                         <div class="section-seperator"></div>
-                        <ul></ul>
+                        <ul class="list-items">
+                            <li>
+                                <div class="contact-container">
+                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-em-icon.png"
+                                        alt="Icon Test Contact">
+                                    <div class="contact-info">
+                                        <p class="contact-name">Tatjana Wolf</p>
+                                        <a class="contact-e-mail" href="mailto:wolf@gmail.com">wolf@gmail.com</a>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
 
-                        <h4 class="contact-list-section-head">U</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">U</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">V</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">V</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">W</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">W</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">X</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">X</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">Y</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
+                        <h4 class="contact-list-section-head d_none">Y</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
 
-                        <h4 class="contact-list-section-head">Z</h4>
-                        <div class="section-seperator"></div>
-                        <ul></ul>
-
-
-                    </section>
+                        <h4 class="contact-list-section-head d_none">Z</h4>
+                        <div class="section-seperator d_none"></div>
+                        <ul class="list-items"></ul>
+                    </section>        
                 </div>
             </section>
-            <section class="contact"></section>
+            <section class="contact">
+                <div class="contacts-header">
+                    <h2>Contacts</h2>
+                    <div class="contacts-header-seperator"></div>
+                    <p class="contacts-header-txt">Better with a Team</p>
+                </div>
+            </section>
         </div>
     </main>
 
