add the header help symbol

--- a/summary.html
+++ b/summary.html
@@ -9,6 +9,7 @@
   <body>
     <div class="summary-header">
       <div class="summary-header-text">Kanban Project Management Tool</div>
+      <img src="./img/summary/help.svg" alt="help" class="summary-help" />
       <div class="profil-header"></div>
     </div>
 
