added contact-info on the right side

--- a/contacts.html
+++ b/contacts.html
@@ -63,7 +63,7 @@
                         <ul class="list-items">
                             <li>
                                 <div class="contact-container">
-                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-am.icon.png"
+                                    <img class="svg-img-small" src="./img/icons/contacts-test-icons/test-am.icon.png"
                                         alt="Icon Test Contact">
                                     <div class="contact-info">
                                         <p class="contact-name">Anton Mayer</p>
@@ -73,7 +73,7 @@
                             </li>
                             <li>
                                 <div class="contact-container">
-                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-as-icon.png"
+                                    <img class="svg-img-small" src="./img/icons/contacts-test-icons/test-as-icon.png"
                                         alt="Icon Test Contact">
                                     <div class="contact-info">
                                         <p class="contact-name">Anja Schulz</p>
@@ -88,7 +88,7 @@
                         <ul class="list-items">
                             <li>
                                 <div class="contact-container">
-                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-bz-icon.png"
+                                    <img class="svg-img-small" src="./img/icons/contacts-test-icons/test-bz-icon.png"
                                         alt="Icon Test Contact">
                                     <div class="contact-info">
                                         <p class="contact-name">Benedikt Ziegler</p>
@@ -108,7 +108,7 @@
                         <ul class="list-items">
                             <li>
                                 <div class="contact-container">
-                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-de-icon.png"
+                                    <img class="svg-img-small" src="./img/icons/contacts-test-icons/test-de-icon.png"
                                         alt="Icon Test Contact">
                                     <div class="contact-info">
                                         <p class="contact-name">David Eisenberg</p>
@@ -124,7 +124,7 @@
                         <ul class="list-items">
                             <li>
                                 <div class="contact-container">
-                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-ef-icon.png"
+                                    <img class="svg-img-small" src="./img/icons/contacts-test-icons/test-ef-icon.png"
                                         alt="Icon Test Contact">
                                     <div class="contact-info">
                                         <p class="contact-name">Eva Fischer</p>
@@ -134,7 +134,7 @@
                             </li>
                             <li>
                                 <div class="contact-container">
-                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-em-icon.png"
+                                    <img class="svg-img-small" src="./img/icons/contacts-test-icons/test-em-icon.png"
                                         alt="Icon Test Contact">
                                     <div class="contact-info">
                                         <p class="contact-name">Emmanuel Mauer</p>
@@ -178,7 +178,7 @@
                         <ul class="list-items">
                             <li>
                                 <div class="contact-container">
-                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-em-icon.png"
+                                    <img class="svg-img-small" src="./img/icons/contacts-test-icons/test-em-icon.png"
                                         alt="Icon Test Contact">
                                     <div class="contact-info">
                                         <p class="contact-name">Marcel Bauer</p>
@@ -217,7 +217,7 @@
                         <ul class="list-items">
                             <li>
                                 <div class="contact-container">
-                                    <img class="vector-img" src="./img/icons/contacts-test-icons/test-em-icon.png"
+                                    <img class="svg-img-small" src="./img/icons/contacts-test-icons/test-em-icon.png"
                                         alt="Icon Test Contact">
                                     <div class="contact-info">
                                         <p class="contact-name">Tatjana Wolf</p>
@@ -259,6 +259,16 @@
                     <div class="contacts-header-seperator"></div>
                     <p class="contacts-header-txt">Better with a Team</p>
                 </div>
+                <section class="contact-info-big">
+                        <img class="svg-img-big" src="./img/icons/contacts-test-icons/test-am.icon.png" alt="">
+                        <div>
+                            <p class="contact-info-big-name">Anton Mayer</p>
+                            <div class="contact-info-big-edit">
+                                <button class="contact-btn"><img class="contact-btn-img" src="./img/icons/edit.svg" alt="Edit Icon"><p>Edit</p></button>
+                                <button class="contact-btn"><img class="contact-btn-img" src="./img/icons/delete.svg" alt="Delete Icon"><p>Delete</p></button>
+                            </div>
+                        </div>
+                </section>
             </section>
         </div>
     </main>
