--- a/summary.html
+++ b/summary.html
@@ -3,18 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/summary.css" />
+    <link rel="stylesheet" href="./style/summary.css" />
+    <link rel="stylesheet" href="./style/navbar.css" />
     <title>Summary</title>
   </head>
   <body>
+    <nav class="navbar">
+        <img class="navbar-logo" src="./img/icons/logo_join_nav.png" alt="">
+        <ul class="nav-list">
+            <li><a class="navbar-link" href="./summary.html"><img class="navbar_img" src="./img/icons/summary_icon.png" alt=""><p>Summary</p></a></li>
+            <li><a class="navbar-link" href="./add_task.html"><img class="navbar_img" src="./img/icons/add_task_icon.png" alt=""><p>Add Task</p></a></li>
+            <li><a class="navbar-link" href="./board.html"><img class="navbar_img" src="./img/icons/board_icon.png" alt=""><p>Board</p></a></li>
+            <li><a class="navbar-link" href="./contacts.html"><img class="navbar_img" src="./img/icons/contacts_icon.png" alt=""><p>Contacts</p></a></li>
+        </ul>
+        <ul class="navbar-footer">
+            <li><a href="">Private Policy</a></li>
+            <li><a href="">Legal Notice</a></li>
+        </ul>
+    </nav>
+
     <div class="summary-header">
       <div class="summary-header-text">Kanban Project Management Tool</div>
-      <img src="./img/summary/help.svg" alt="help" class="summary-help" />
-      <div class="profil-header"></div>
+      <div class="summary-profil">
+        <img src="./img/summary/help.svg" alt="help" class="summary-help" />
+        <div class="profil-header"></div>
+      </div>
     </div>
 
     <section class="summary-title">
-      <div class="summary-title-text" id="summary-title-360">Join 360<div class="summary-title-separator-blue"></div><div class="summary-title-text">Key Metrics at a Glance</div></div>
+      <div class="summary-title-text" id="summary-title-360">Join 360<div class="summary-title-separator-blue"></div>
+      <div class="summary-title-text">Key Metrics at a Glance</div></div>
     </section>
     <section class="summary-content">
 
@@ -64,7 +82,7 @@
         <div class="summary-text-1">Tasks in<br>Board</div></div>
       </div>
     </section>
-    <div class="summary-greetings">good morning,<div id="summary-greetings-name">Kim Burmester<div></div>
+      <div class="summary-greetings">good morning,<div id="summary-greetings-name">Kim Burmester<div></div>
     </section>
 
   </body>
