--- a/add_task.html
+++ b/add_task.html
@@ -11,41 +11,68 @@
 
   <body>
     <nav class="navbar">
-        <img class="navbar-logo" src="./img/icons/logo_join_nav.png" alt="">
-        <ul class="nav-list">
-            <li><a class="navbar-link" href="./summary.html">
-                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/summary_icon.png"
-                            alt="Summary Logo">
-                        <p>Summary</p>
-                    </div>
-                </a></li>
-            <li><a class="navbar-link" href="./add_task.html">
-                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/add_task_icon.png"
-                            alt="Add-Task Logo">
-                        <p>Add Task</p>
-                    </div>
-                </a></li>
-            <li><a class="navbar-link" href="./board.html">
-                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/board_icon.png"
-                            alt="Board Logo">
-                        <p>Board</p>
-                    </div>
-                </a></li>
-            <li><a class="navbar-link navbar-active" href="./contacts.html">
-                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/contacts_icon.png"
-                            alt="Contacts Logo">
-                        <p>Contacts</p>
-                    </div>
-                </a></li>
-        </ul>
-        <ul class="navbar-footer">
-            <li><a class="navbar-footer-link" href="">
-                    <p>Private Policy</p>
-                </a></li>
-            <li><a class="navbar-footer-link" href="">
-                    <p>Legal Notice</p>
-                </a></li>
-        </ul>
+      <img class="navbar-logo" src="./img/icons/logo_join_nav.png" alt="" />
+      <ul class="nav-list">
+        <li>
+          <a class="navbar-link" href="./summary.html">
+            <div class="navbar-link-content">
+              <img
+                class="navbar_img"
+                src="./assets/svg/summary.svg"
+                alt="Summary Logo"
+              />
+              <p>Summary</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="navbar-link navbar-active" href="./add_task.html">
+            <div class="navbar-link-content">
+              <img
+                class="navbar_img"
+                src="./assets/svg/edit_square.svg"
+                alt="Add-Task Logo"
+              />
+              <p>Add Task</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="navbar-link" href="./board.html">
+            <div class="navbar-link-content">
+              <img
+                class="navbar_img"
+                src="./assets/svg/board.svg"
+                alt="Board Logo"
+              />
+              <p>Board</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="navbar-link" href="./contacts.html">
+            <div class="navbar-link-content">
+              <img
+                class="navbar_img"
+                src="./assets/svg/perm_contact_calendar.svg"
+                alt="Contacts Logo"
+              />
+              <p>Contacts</p>
+            </div>
+          </a>
+        </li>
+      </ul>
+      <ul class="navbar-footer">
+        <li>
+          <a class="navbar-footer-link" href="">
+            <p>Private Policy</p>
+          </a>
+        </li>
+        <li>
+            <p>Legal Notice</p>
+          </a>
+        </li>
+      </ul>
     </nav>
     <main>
       <header class="main-header"></header>
