--- a/contacts.html
+++ b/contacts.html
@@ -10,28 +10,28 @@
 
 <body>
     <nav class="navbar">
-        <img class="navbar-logo" src="./img/icons/logo_join_nav.png" alt="">
+        <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="">
         <ul class="nav-list">
             <li><a class="navbar-link" href="./summary.html">
-                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/summary_icon.png"
+                    <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/summary.svg"
                             alt="Summary Logo">
                         <p>Summary</p>
                     </div>
                 </a></li>
             <li><a class="navbar-link" href="./add_task.html">
-                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/add_task_icon.png"
+                    <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/edit_square.svg"
                             alt="Add-Task Logo">
                         <p>Add Task</p>
                     </div>
                 </a></li>
             <li><a class="navbar-link" href="./board.html">
-                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/board_icon.png"
+                    <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/board.svg"
                             alt="Board Logo">
                         <p>Board</p>
                     </div>
                 </a></li>
             <li><a class="navbar-link navbar-active" href="./contacts.html">
-                    <div class="navbar-link-content"><img class="navbar_img" src="./img/icons/contacts_icon.png"
+                    <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/perm_contact_calendar.svg"
                             alt="Contacts Logo">
                         <p>Contacts</p>
                     </div>
